--- a/src/MATH/Makefile
+++ b/src/MATH/Makefile
@@ -10,17 +10,18 @@ ARFLAGS ?= rvc
 RANLIB  ?= ranlib
 RM      ?= rm
 COPY    ?= cp -v
+ARCHV   ?= .a
 
 objects = bcoef.o besjn.o conv.o csomm.o cwig3j.o determ.o exjlnl.o	\
 phamp.o quartc.o sdist.o somm2.o terp.o trap.o besjh.o bjnser.o		\
 cpl0.o csomm2.o czeros.o dist.o lu.o polint.o rotwig.o somm.o strap.o	\
 terpc.o
 
-all:	libfeffmath.a
+all:	libfeffmath$(ARCHV)
 
-libfeffmath.a:	$(objects)
-	$(AR) $(ARFLAGS) libfeffmath.a $(objects)
-	$(RANLIB) libfeffmath.a
+libfeffmath$(ARCHV):	$(objects)
+	$(AR) $(ARFLAGS) libfeffmath$(ARCHV) $(objects)
+	$(RANLIB) libfeffmath$(ARCHV)
 
 bcoef.o:	bcoef.f ../HEADERS/dim.h
 besjh.o:	besjh.f ../HEADERS/dim.h
@@ -33,11 +34,11 @@ phamp.o:	phamp.f ../HEADERS/dim.h ../HEADERS/const.h
 
 
 clean:
-	$(RM) *.a *.o
+	$(RM) *$(ARCHV) *.o
 
 INSTARCH = @echo "Nothing to install in MATH"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffmath.a $(LIBDIR)
+INSTARCH = $(COPY) libfeffmath$(ARCHV) $(LIBDIR)
 endif
 
 install:
