--- a/src/OPCONSAT/Makefile
+++ b/src/OPCONSAT/Makefile
@@ -16,14 +16,18 @@ ARFLAGS  ?= rvc
 RANLIB   ?= ranlib
 RM       ?= rm
 COPY     ?= cp -v
+ARCHV    ?= .a
+SHOBJ    ?= .so
+EXEXT    ?=
 
 FORTRAN ?= gfortran
 SHARED  ?= -shared
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
 
 
-archives = ../JSON/libfeffjson.a ../json-fortran/libjsonfortran.a	\
-../COMMON/libfeffcom.a ../PAR/libfeffpar.a ../MATH/libfeffmath.a
+archives = ../JSON/libfeffjson$(ARCHV)					\
+../json-fortran/libjsonfortran$(ARCHV) ../COMMON/libfeffcom$(ARCHV)	\
+../PAR/libfeffpar$(ARCHV) ../MATH/libfeffmath$(ARCHV)
 
 objects = oca_dimsmod.o oca_atoms_inp.o oca_geometry_inp.o		\
 oca_global_inp.o oca_opcons_inp.o oca_errormod.o oca_padio.o		\
@@ -31,13 +35,13 @@ oca_iofiles.o oca_iomod.o oca_kinds.o oca_mtdp.o oca_atomicpotio.o	\
 oca_potential_inp.o oca_errorfile.o oca_constants.o oca_par.o eps.o	\
 getelement.o bwords_nc.o
 
-all:	otherdirs libfeffopconsat.a opconsat eps2exc libfeffloss.so
+all:	otherdirs libfeffopconsat$(ARCHV) opconsat$(EXEXT) eps2exc$(EXEXT) libfeffloss$(SHOBJ)
 
-opconsat:	opconsat.o e2emisc.o $(objects) $(archives)
+opconsat$(EXEXT):	opconsat.o e2emisc.o $(objects) $(archives)
 	$(FORTRAN) -o $@ $< e2emisc.o $(objects) $(archives)
 
-eps2exc:	eps2exc.o e2emisc.o rdloss.o ../MATH/libfeffmath.a ../COMMON/libfeffcom.a
-	$(FORTRAN) -o $@ $< e2emisc.o rdloss.o ../MATH/libfeffmath.a ../COMMON/libfeffcom.a
+eps2exc$(EXEXT):	eps2exc.o e2emisc.o rdloss.o ../MATH/libfeffmath$(ARCHV) ../COMMON/libfeffcom$(ARCHV)
+	$(FORTRAN) -o $@ $< e2emisc.o rdloss.o ../MATH/libfeffmath$(ARCHV) ../COMMON/libfeffcom$(ARCHV)
 
 
 %.o:	%.f
@@ -47,34 +51,37 @@ eps2exc:	eps2exc.o e2emisc.o rdloss.o ../MATH/libfeffmath.a ../COMMON/libfeffcom
 	$(F90) $(FCFLAGS) -J${CURDIR} -o $@ $<
 
 libfeffloss.o:	libfeffloss.f ../HEADERS/const.h ../HEADERS/dim.h ../HEADERS/parallel.h
-loss.o:		loss.f        ../HEADERS/const.h ../HEADERS/dim.h ../HEADERS/parallel.h
 
-libfeffopconsat.a:	$(objects)
+loss.o:		loss.f        ../HEADERS/const.h ../HEADERS/dim.h ../HEADERS/parallel.h
+loss$(EXEXT):	loss.o libfeffloss.o e2emisc.o libfeffopconsat$(ARCHV)
+	$(FORTRAN) -o $@  libfeffloss.o e2emisc.o libfeffopconsat$(ARCHV) $< ../POT/inipotph.o ../JSON/json_read_libpotph.o $(archives)
+
+libfeffopconsat$(ARCHV):	$(objects)
 	$(AR) $(ARFLAGS) $@ $(objects)
 	$(RANLIB) $@
 
-libfeffloss.so:	libfeffloss.o e2emisc.o eps.o libfeffopconsat.a
-	$(FORTRAN) $(SHARED) libfeffloss.o e2emisc.o eps.o libfeffopconsat.a -o $@
+libfeffloss$(SHOBJ):	libfeffloss.o e2emisc.o eps.o libfeffopconsat$(ARCHV)
+	$(FORTRAN) $(SHARED) libfeffloss.o e2emisc.o eps.o libfeffopconsat$(ARCHV) -o $@
 
 otherdirs:
-	$(MAKE) -C ../COMMON       libfeffcom.a
-	$(MAKE) -C ../PAR          libfeffpar.a
-	$(MAKE) -C ../MATH         libfeffmath.a
-	$(MAKE) -C ../JSON         libfeffjson.a
-	$(MAKE) -C ../json-fortran libjsonfortran.a
+	$(MAKE) -C ../COMMON       libfeffcom$(ARCHV)
+	$(MAKE) -C ../PAR          libfeffpar$(ARCHV)
+	$(MAKE) -C ../MATH         libfeffmath$(ARCHV)
+	$(MAKE) -C ../JSON         libfeffjson$(ARCHV)
+	$(MAKE) -C ../json-fortran libjsonfortran$(ARCHV)
 
 clean:
-	$(RM) *.a *.o *.mod opconsat eps2exc
+	$(RM) *$(ARCHV) *.o *.mod opconsat$(EXEXT) eps2exc$(EXEXT)
 
-INSTARCH = @echo "Not installing .a files"
+INSTARCH = @echo "Not installing $(ARCHV) files"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffopconsat.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfeffopconsat$(ARCHV) $(PREFIX)/lib
 endif
 
 install:
-	$(COPY) opconsat         $(BINDIR)
-	$(COPY) eps2exc          $(BINDIR)
-	$(COPY) libfeffloss.so   $(LIBDIR)
+	$(COPY) opconsat$(EXEXT)    $(BINDIR)
+	$(COPY) eps2exc$(EXEXT)     $(BINDIR)
+	$(COPY) libfeffloss$(SHOBJ) $(LIBDIR)
 	$(INSTARCH)
 
 .PHONEY:	clean install all otherdirs
