--- a/src/JSON/Makefile
+++ b/src/JSON/Makefile
@@ -10,15 +10,16 @@ ARFLAGS ?= rvc
 RANLIB  ?= ranlib
 RM      ?= rm
 COPY    ?= cp -v
+ARCHV   ?= .a
 
 objects = bailout.o read_geom.o read_atoms.o read_global.o read_pot.o	\
 read_fpf0.o json_xsect.o read_xsect.o json_nnnn.o
 
-all:	libfeffjson.a
+all:	libfeffjson$(ARCHV)
 
-libfeffjson.a:	$(objects)
-	$(AR) $(ARFLAGS) libfeffjson.a $(objects)
-	$(RANLIB) libfeffjson.a
+libfeffjson$(ARCHV):	$(objects)
+	$(AR) $(ARFLAGS) libfeffjson$(ARCHV) $(objects)
+	$(RANLIB) libfeffjson$(ARCHV)
 
 json_nnnn.o:	json_nnnn.f ../HEADERS/vers.h ../HEADERS/dim.h ../HEADERS/const.h
 json_read_libpotph.o:	json_read_libpotph.f ../HEADERS/dim.h ../HEADERS/const.h
@@ -37,11 +38,11 @@ read_xsect.o:	read_xsect.f  ../HEADERS/dim.h ../HEADERS/const.h
 
 
 clean:
-	$(RM) *.a *.o
+	$(RM) *$(ARCHV) *.o
 
 INSTARCH = @echo "Nothing to install in JSON"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffjson.a $(LIBDIR)
+INSTARCH = $(COPY) libfeffjson$(ARCHV) $(LIBDIR)
 endif
 
 install:
