--- a/src/PATH/Makefile
+++ b/src/PATH/Makefile
@@ -22,9 +22,9 @@ archives = ../json-fortran/libjsonfortran$(ARCHV)	\
 ../COMMON/libfeffcom$(ARCHV) ../PAR/libfeffpar$(ARCHV)	\
 ../MATH/libfeffmath$(ARCHV) ../JSON/libfeffjson$(ARCHV)
 
-all:	otherdirs pathfinder$(EXEXT)
+all:	otherdirs feff8l_pathfinder$(EXEXT)
 
-pathfinder$(EXEXT):	$(objects)
+feff8l_pathfinder$(EXEXT):	$(objects)
 	$(FORTRAN) $(FLINKARGS) $(objects) $(archives) -o $@
 
 
@@ -49,10 +49,10 @@ timrep.o:	timrep.f ../HEADERS/dim.h
 
 
 clean:
-	$(RM) *.o pathfinder$(EXEXT)
+	$(RM) *.o feff8l_pathfinder$(EXEXT)
 
 install:
-	$(COPY) pathfinder$(EXEXT) $(BINDIR)
+	$(COPY) feff8l_pathfinder$(EXEXT) $(BINDIR)
 
 otherdirs:
 	$(MAKE) -C ../json-fortran libjsonfortran$(ARCHV)
