--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ python:
     - 3.6
 
 before_install:
-    - sudo apt-get install gfortran-6 binutils
+    - sudo apt-get install gfortran=6.3
+    - gfortran -v
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
