yet another attempt to specify gfortran version

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ python:
     - 2.7
     - 3.6
 
+addons:
+  apt:
+    packages:
+      - gfortran-6
+      - binutils
+
+
 before_install:
-    - sudo apt-get install gfortran=5
     - gfortran -v
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
