--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,19 @@
 
 language: python
 sudo: required
+dist: trusty
+
 
 python:
     - 2.7
     - 3.6
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gfortran-6
-      - binutils
-
 
 before_install:
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+    - sudo apt-get update
+    - sudo apt-get install gcc-4.9 gfortran-4.9
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-4.9
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
     - bash miniconda.sh -b -p $HOME/miniconda
     - export PATH="$HOME/miniconda/bin:$PATH"
@@ -29,8 +27,6 @@ install:
     - conda create -q -n test_env python=$TRAVIS_PYTHON_VERSION numpy scipy libgfortran nose pytest
     - source activate test_env
     - find /usr -name "*gfortran*"
-    - ln -fs /usr/bin/gfortran-6 "$HOME/miniconda/bin/gfortran" && gfortran --version
-    - export LD_LIBRARY_PATH=/usr/lib/gcc/x86_64-linux-gnu/6:$LD_LIBRARY_PATH
     - make all
     - make install
 
