--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ python:
 
 
 before_install:
+    - sudo -E apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
     - sudo apt-get update
     - sudo apt-get install gcc-4.9 gfortran-4.9
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 60 --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-4.9
