--- a/src/PAR/Makefile
+++ b/src/PAR/Makefile
@@ -4,6 +4,7 @@ LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FCFLAGS_SEQ ?= -c -O3 -ffree-line-length-none -g -Waliasing -Wampersand -Wconversion -Wc-binding-type -Wintrinsics-std -Wline-truncation -Winteger-division -fPIC
 AR      ?= ar
 ARFLAGS ?= rvc
 RANLIB  ?= ranlib
@@ -20,6 +21,8 @@ libfeffpar$(ARCHV):	$(objects)
 	$(RANLIB) libfeffpar$(ARCHV)
 
 sequential.o:	sequential.f ../HEADERS/parallel.h
+	$(FORTRAN) $(FCFLAGS_SEQ) -o $@ $<
+
 #parallel.o:	parallel.f   ../HEADERS/parallel.h mpif.h
 
 %.o:	%.f
