--- a/src/FMS/Makefile
+++ b/src/FMS/Makefile
@@ -4,7 +4,7 @@ PREFIX  ?= /usr/local
 LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
-FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC -fno-automatic
 AR      ?= ar
 ARFLAGS ?= rvc
 RANLIB  ?= ranlib
