--- a/src/GENFMT/Makefile
+++ b/src/GENFMT/Makefile
@@ -6,7 +6,7 @@ INCDIR  ?= $(PREFIX)/include
 
 FORTRAN ?= gfortran
 SHARED  ?= -shared
-FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC -fno-automatic
 FJSON   ?= -I../json-fortran -J../json-fortran
 AR      ?= ar
 ARFLAGS ?= rvc
@@ -23,7 +23,7 @@ CLINKARGS = -lgfortran
 ARCHV = .a
 SHOBJ = .so
 EXEXT =
-FCFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FCFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC -fno-automatic
 FLINKARGS =
 
 
