more do-lopp fixes

--- a/src/XSPH/Makefile
+++ b/src/XSPH/Makefile
@@ -3,7 +3,7 @@ PREFIX  ?= /usr/local
 BINDIR  ?= $(PREFIX)/bin
 
 FORTRAN ?= gfortran
-FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
+FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC -fno-automatic
 FJSON   ?= -I../json-fortran -J../json-fortran
 AR      ?= ar
 ARFLAGS ?= rvc
