--- a/src/Makefile
+++ b/src/Makefile
@@ -48,7 +48,7 @@ ifeq ($(OS),Windows_NT)
     UNAME = Windows_NT
     SHOBJ = .dll
     EXEXT = .exe
-    FCFLAGS  = -c -O3 -ffree-line-length-none -g -Wall
+    FCFLAGS  = -c -O3 -ffree-line-length-none -g -Wall -fPIC -fno-automatic
 else
     UNAME := $(shell uname -s)
     ifeq ($(UNAME),Darwin)
